# cmake-studies

./: LICENSE
cmake-project-00/: CMakeLists.txt  build.sh  foo.cpp  foo.h  gen_pkg.sh  main.cpp  test.sh
